Add generate endpoint allowing use to generate a config file

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>File - <%= data.name %></title>
-  <link rel="icon" type="image/x-icon" href="files/favicon.ico">
-  <link rel="stylesheet" href="css/index.css">
-  <meta name="robots" content="noindex">
+  <link rel="icon" type="image/x-icon" href="../files/favicon.ico">
   <meta name="twitter:card" content="summary_large_image" />
   <meta property="og:image" content="<%= img %>" />
+  <link rel="stylesheet" href="../css/index.css">
   <meta name="theme-color" content="#000000" />
   <meta property="og:description" content="" />
   <meta property="og:site_name" content="">
+  <title>File - <%= data.name %></title>
+  <meta name="robots" content="noindex">
+  <meta charset="UTF-8">
 </head>
 
 <body>
