Bad request error pages

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -89,3 +89,9 @@ video {
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
+
+.warningMsg {
+  color: red;
+  font-size: 1.5rem;
+  text-decoration: underline;
+}
