--- a/src/views/pages/badName.ejs
+++ b/src/views/pages/badName.ejs
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/x-icon" href="../files/favicon.ico">
   <link rel="stylesheet" href="../css/index.css">
   <meta name="robots" content="noindex">
-  <title>Missing File</title>
+  <title>ShareX-API | Bad Name</title>
   <meta charset="UTF-8">
 </head>
 
