--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -4,35 +4,20 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="../files/favicon.ico">
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta property="og:image" content="<%= img %>" />
   <link rel="stylesheet" href="../css/index.css">
-  <meta name="theme-color" content="#000000" />
-  <meta property="og:description" content="" />
-  <meta property="og:site_name" content="">
-  <title>File - <%= data.name %></title>
   <meta name="robots" content="noindex">
+  <title>ShareX-API | Home</title>
   <meta charset="UTF-8">
 </head>
 
 <body>
   <main>
     <div class="container">
-      <% if (img.endsWith('.mp4')) { %>
-        <video controls>
-          <source src="<%= img %>" type="video/mp4"> Your browser does not support the video tag.
-        </video>
-      <% } else { %>
-        <img src="<%= img %>" alt="Image">
-      <% } %>
+      <img src="https://images.unsplash.com/photo-1582845512747-e42001c95638" alt="Image of a rubber duck">
       <div class="text">
-        <p>Name - <%= data.name %></p>
-        <div class="tooltip">
-          <p>Time - <%= getTime(data.timestamp.unix, Intl.DateTimeFormat().resolvedOptions().timeZone) %></p>
-          <span class="tooltiptext">UTC - <%= data.timestamp.utc %></span>
-        </div>
-        <p>Date - <%= getDate(data.timestamp.unix, Intl.DateTimeFormat().resolvedOptions().timeZone) %></p>
-        <p>Size - <%= data.size.dynamic %></p>
+        <p class="homePageText">ShareX-API Made By kathund with ❤️</p>
+        <a class="homePageText" href="https://github.com/Kathund/ShareX-API">Open Source on github!</a>
+        <p>Theres nothing much here but heres a duck instead</p>
       </div>
     </div>
   </main>
