--- a/src/views/pages/file.ejs
+++ b/src/views/pages/file.ejs
@@ -3,8 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ShareX-API | <%= data.name %>.<%= data.fileExtension %>
-  </title>
+  <title>ShareX-API | <%= data.name %>.<%= data.fileExtension %></title>
   <link rel="icon" type="image/x-icon" href="../files/favicon.ico">
   <meta name="twitter:card" content="summary_large_image" />
   <meta property="og:image" content="<%= img %>" />
@@ -14,12 +13,10 @@
   <meta property="og:site_name" content="">
   <meta name="robots" content="noindex">
   <meta charset="UTF-8">
-
   <% if (img.endsWith('.mp4')) { %>
-  <meta name="twitter:player" content="video url">
-  <% } else { %>
-  <meta property="og:image" content="<%= img %>" />
-  <% } %>
+  <meta name="twitter:player" content="<%= img %>"><%
+  } else { %>
+  <meta property="og:image" content="<%= img %>" /><% } %>
 </head>
 
 <body>
@@ -33,20 +30,15 @@
       <img src="<%= img %>" alt="Image">
       <% } %>
       <div class="text">
-        <p>Name - <%= data.name %>
-        </p>
+        <p>Name - <%= data.name %></p>
         <div class="tooltip">
-          <p>Time - <%= getTime(data.timestamp.unix, Intl.DateTimeFormat().resolvedOptions().timeZone) %>
-          </p>
-          <span class="tooltiptext">UTC - <%= data.timestamp.utc %></span>
+          <p>Time - <%= getTime(data.timestamp.unix, Intl.DateTimeFormat().resolvedOptions().timeZone) %></p><span class="tooltiptext">UTC - <%= data.timestamp.utc %></span>
         </div>
-        <p>Date - <%= getDate(data.timestamp.unix, Intl.DateTimeFormat().resolvedOptions().timeZone) %>
-        </p>
-        <p>Size - <%= data.size.dynamic %>
-        </p>
+        <p>Date - <%= getDate(data.timestamp.unix, Intl.DateTimeFormat().resolvedOptions().timeZone) %></p>
+        <p>Size - <%= data.size.dynamic %></p>
       </div>
     </div>
   </main>
 </body>
 
-</html>
+<>
