index meta tags

--- a/src/views/pages/file.ejs
+++ b/src/views/pages/file.ejs
@@ -10,7 +10,7 @@
   <meta name="theme-color" content="#000000" />
   <meta property="og:description" content="" />
   <meta property="og:site_name" content="">
-  <meta name="robots" content="noindex">
+  <meta name="robots" content="noindex,nofollow">
   <meta charset="UTF-8">
   <% if (img.endsWith('.mp4')) { %>
   <meta name="og:video:secure_url" content="<%= img %>">
