--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -2,10 +2,18 @@
 <html lang="en">
 
 <head>
+  <meta property="og:description" content="ShareX-API | Made By Kathund - Open source and free to use at https://github.com/Kathund/ShareX-API" />
+  <meta name="description" content="ShareX-API | Made By Kathund - Open source and free to use at https://github.com/Kathund/ShareX-API" />
+  <meta property="og:url" content="https://github.com/Kathund/ShareX-API" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="canonical" href="https://github.com/Kathund/ShareX-AP" />
   <link rel="icon" type="image/x-icon" href="../files/favicon.ico">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta property="og:title" content="ShareX-API | Home" />
+  <meta property="og:site_name" content="ShareX-API" />
   <link rel="stylesheet" href="../css/index.css">
-  <meta name="robots" content="noindex">
+  <meta name="robots" content="noindex,nofollow">
+  <meta name="theme-color" content="#52A396" />
   <title>ShareX-API | Home</title>
   <meta charset="UTF-8">
 </head>
