--- a/src/views/pages/missingFile.ejs
+++ b/src/views/pages/missingFile.ejs
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/x-icon" href="../files/favicon.ico">
   <link rel="stylesheet" href="../css/index.css">
   <title>ShareX-API | Missing File</title>
-  <meta name="robots" content="noindex">
+  <meta name="robots" content="noindex,nofollow">
   <meta charset="UTF-8">
 </head>
 
