--- a/src/views/pages/badName.ejs
+++ b/src/views/pages/badName.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="../files/favicon.ico">
   <link rel="stylesheet" href="../css/index.css">
-  <meta name="robots" content="noindex">
+  <meta name="robots" content="noindex,nofollow">
   <title>ShareX-API | Bad Name</title>
   <meta charset="UTF-8">
 </head>
